// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - SimpleAutocomplete:  should match the snapshot for AutoCompleteContainer - no result found 1`] = `
<DocumentFragment>
  .c2.c2 {
  -webkit-letter-spacing: 0.0625rem;
  -moz-letter-spacing: 0.0625rem;
  -ms-letter-spacing: 0.0625rem;
  letter-spacing: 0.0625rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #f7f7f7;
  border-top: 0.0625rem solid #eaeaea;
  border-bottom: 0.0625rem solid #eaeaea;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: calc(0.75rem - 1px) 1.025rem calc(0.812rem - 1px) 1rem;
  color: #000000;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 0.25rem 1rem;
  color: #000000;
}

.c3 ul {
  margin: 0;
  padding: 0;
}

.c0 {
  background: white;
}

.c4 {
  padding: 0.5rem 0;
  display: block;
  font-size: 0.875rem;
  font-family: "AzoSansRegular","Helvetica Neue",Arial,sans-serif;
  line-height: 1.5;
  word-break: break-word;
}

.c4 strong {
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
}

@media (min-width:768px) {
  .c1 {
    background: #f7f7f7;
    padding: 0.5rem 0.625rem;
    border-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    padding: 0.125rem 0.625rem;
  }
}

@media (min-width:400px) and (max-width:767px) {
  .c3 ul {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }

  .c3 ul li {
    -webkit-flex-basis: calc(100% / 2);
    -ms-flex-preferred-size: calc(100% / 2);
    flex-basis: calc(100% / 2);
    padding-right: 1rem;
  }
}

@media (min-width:768px) {
  .c0 {
    border-radius: 0.25rem;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border: 0.0625rem solid #eaeaea;
    width: 5.375rem;
  }
}

<div
    class="c0"
    data-testid="header-simple-auto-complete"
  >
    <div
      class="PrivateHiddenCss-mdUp-23"
    >
      <div
        class="c1"
        data-testid="header-simple-autocomplete-title"
      >
        <h4
          class="MuiTypography-root c2 MuiTypography-h4"
        />
      </div>
    </div>
    <div
      class="c3"
      data-testid="recents-body"
    >
      <span
        class="c4"
      >
        No results found for  '
        <strong />
        '
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components - SimpleAutocomplete:  should match the snapshot for AutoCompleteContainer 1`] = `
<DocumentFragment>
  .c2.c2 {
  -webkit-letter-spacing: 0.0625rem;
  -moz-letter-spacing: 0.0625rem;
  -ms-letter-spacing: 0.0625rem;
  letter-spacing: 0.0625rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #f7f7f7;
  border-top: 0.0625rem solid #eaeaea;
  border-bottom: 0.0625rem solid #eaeaea;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: calc(0.75rem - 1px) 1.025rem calc(0.812rem - 1px) 1rem;
  color: #000000;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 0.25rem 1rem;
  color: #000000;
}

.c3 ul {
  margin: 0;
  padding: 0;
}

.c0 {
  background: white;
}

.c4 {
  border-top: 0.0625rem solid #eaeaea;
  margin-top: 1rem;
  padding-top: 1rem;
}

.c4 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  color: #257f39;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-size: 0.875rem;
}

@media (min-width:768px) {
  .c1 {
    background: #f7f7f7;
    padding: 0.5rem 0.625rem;
    border-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    padding: 0.125rem 0.625rem;
  }
}

@media (min-width:400px) and (max-width:767px) {
  .c3 ul {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }

  .c3 ul li {
    -webkit-flex-basis: calc(100% / 2);
    -ms-flex-preferred-size: calc(100% / 2);
    flex-basis: calc(100% / 2);
    padding-right: 1rem;
  }
}

@media (min-width:768px) {
  .c0 {
    border-radius: 0.25rem;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border: 0.0625rem solid #eaeaea;
    width: 5.375rem;
  }
}

@media (min-width:768px) {
  .c4 a {
    padding-right: 1rem;
  }
}

<div
    class="c0"
    data-testid="header-simple-auto-complete"
  >
    <div
      class="PrivateHiddenCss-mdUp-8"
    >
      <div
        class="c1"
        data-testid="header-simple-autocomplete-title"
      >
        <h4
          class="MuiTypography-root c2 MuiTypography-h4"
        />
      </div>
    </div>
    <div
      class="c3"
      data-testid="recents-body"
    >
      <ul>
        <li>
          <a
            href="/abc"
          >
            abc
          </a>
        </li>
        <li>
          <a
            href="/abcdef"
          >
            abcdef
          </a>
        </li>
      </ul>
      <div
        class="PrivateHiddenCss-mdUp-8"
      >
        <div
          class="c4"
        >
          <a
            data-ga-v1="Search"
            data-ga-v3="See All Results"
            data-testid="header-simple-autocomplete-see-all-results-link"
          >
            See all results
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
